Make code buildable as a module

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "kv-synced",
   "version": "1.0.0",
   "description": "KV store with synchronization over cloud drives.",
-  "main": "index.js",
+  "main": "kv.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "build": "tsc"
   },
   "author": "Andrew Romanenco",
   "license": "MIT",
   "devDependencies": {
     "ts-jest": "^29.2.3",
+    "tslib": "^2.6.3",
     "typescript": "^5.5.4"
   }
 }
